[BUG FIX] [MER-2394] styling inconsistencies between normal text and examples (#4012)
* add content class to groups
remove x padding from group content

* fix content style for client stem delivery rendering

* fix an issue where popups are hidden behind navbar

* fix spacing in lists and choices

--- a/assets/styles/common/elements.scss
+++ b/assets/styles/common/elements.scss
@@ -122,7 +122,8 @@ $element-margin-bottom: 1.5em;
 
   ul li,
   ol li {
-    margin-bottom: 0.25rem;
+    line-height: 2em;
+    margin-bottom: $element-margin-bottom;
   }
 
   ul,
